--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -134,14 +134,13 @@ html {font-family: var(--ff-manrope);
 }
 
 body {font-size: 1.6rem;
-  font-weight: var(--fw-normal);
-  line-height: 1.6;
-  height:300vh;
+  font-weight: 1.6rem;
+  line-height: 1.7;
   color: var(--dark-gray);
   background-color: var(--white);
-
-
    }
+
+   body.nav-active {overflow: hidden;}
    
    ::-webkit-scrollbar{
     width: 10px;
@@ -163,8 +162,25 @@ body {font-size: 1.6rem;
 /*-----------------------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
+.container { 
+  padding-inline: 16px;
+}
 
+.navbar-social {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
 
+.navbar-social-link {
+  font-size: 2.5rem;
+  color: var(--primary-color);
+  transition: color var(--transition-1);
+}
+
+.navbar-social-link:is(:hover, :focus-visible) {
+ transform: translateY(-3px);
+}
 
 
 
@@ -172,8 +188,139 @@ body {font-size: 1.6rem;
   #HEADER
 \*-----------------------------------*/
 
+.header .btn{display: none; 
+
+}
+
+.header {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-block: 20px;
+  box-shadow: var(--shadow-1);
+  z-index: 4;
+}
+
+.header.active {
+  position: fixed;
+  background-color: var(--white);
+  animation: slideIn 0.5s ease forwards;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 
 
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+}
+
+.header.active .logo-light, .header .logo-dark {
+  display: none;
+}
+
+.header .logo-dark, .header.active .logo-dark {
+  display: block;
+}
+
+.nav-open-btn{
+  font-size: 2.5rem;
+  color: var(--primary-color);
+}
+
+.header.active .nav-open-btn {
+ color:var(--charcoal);
+}
+
+.navbar {
+  position:fixed;
+  top:0;
+  left:-300px;
+  background-color: var(--accent-color);
+  color:var(--white);
+  max-width: 300px ;
+  height: 100vh;
+  width:100%;
+  padding:30px;
+  padding-block-end: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  z-index: 2;
+  visibility: hidden;
+  transition: var(--transition-3);
+}
+
+.navbar.active {
+  visibility: visible;
+  transform: translateX(300px);
+}
+
+.navbar-top { 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 16px;
+
+}
+
+.nav-close-btn {
+  background-color: var(--white_a8);
+  color: var(--accent-color);
+  font-size: 2rem;
+  padding: 6px;
+  border-radius: var(--radius-circle);
+  transition: var(--transition-1);
+}
+
+.nav-close-btn ion-icon{
+  --ionicon-stroke-width: 50px;
+}
+
+.nav-close-btn:is(:hover, :focus-visible) {
+  background-color: var(--white_a12);
+
+}
+
+.navbar-list { margin-block-end: auto;}
+
+.navbar-link{ font-weight: var(--fw-700);
+padding-block: 6px;
+
+}
+
+.contact-link { transition: var(--transition-1);}
+
+.contact-link:is(:hover, :focus-visible) {
+ color:#2c3e50 ; 
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--raisin-black);
+  pointer-events: none;
+  opacity: 0;
+  transition: var(--transition-1);
+}
+
+.overlay.active {
+  pointer-events: all;
+  opacity: 0.8;
+}
 
 
 /*-----------------------------------*\
