--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -29,8 +29,8 @@
   --black-coral: hsla(220, 12%, 43%, 1);
 
   --primary-color: #2c3e50; /* Deep Blue */
-  --secondary-color: #e67e22; /* Orange */
-  --accent-color: #d35400; /* Darker Orange */
+  --secondary-color: #6c7a89; /* Slate Gray*/
+  --accent-color: #3498db; /* Deep Red */
 
   --white: #ffffff;
   --light-gray: #f5f5f5;
@@ -249,6 +249,21 @@ body {font-size: 1.6rem;
     height: 100%;
     object-fit: cover;
   
+  }
+
+  .section-subtitle{
+    color: var(--dark-gray);
+    font-size: var(--fs-7);
+    text-transform: uppercase;
+    font-weight: var(--fw-700);
+    margin-block-end: 16px ;
+    text-align: center;
+
+  }
+
+  .grid-list {
+    display: grid;
+    gap: 25 px;
   }
 
   
@@ -509,9 +524,57 @@ overflow: hidden;
   #SERVICE
 \*-----------------------------------*/
 
+.service { 
+  text-align: center;
+
+}
 
 
+.service .section-title {
+margin-block-end: 50px;
+}
 
+.service-card{
+  padding:48px; 
+  box-shadow: var(--shadow-2);
+  border-radius: var(--radius-6);
+}
+
+.service-card .card-icon {
+  width : 60px ; 
+  height: 60px;
+  background-color: var(--primary-color);
+  display: grid;
+  place-items: center;
+  color:var(--white);
+  margin-inline: auto;
+  font-size: 2.5rem;
+  border-radius: var(--radius-circle);
+}
+
+.service-card .card-icon ion-icon {
+  --ionion-stroke-width: 50px;
+}
+
+.service-card .card-title {
+  margin-block:16px 10px;
+}
+
+.service-card .btn-text {
+display:flex; 
+justify-content: center;
+align-items: center;
+gap: 4px;
+margin-block-start: 10px;
+color: var(--primary-color);
+font-weight: var(--fw-700);
+transition: var(--transition-1);
+}
+
+.service-card .btn-text:is(:hover, :focus-visible) {
+  opacity: 0.9;
+  color: var(--accent-color);
+}
 
 /*-----------------------------------*\
   #ABOUT
